add noTimes icon and validations on finished Projects

--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,10 @@ label:focus,
   filter: brightness(1.2);
 }
 
+.badge{
+  white-space: pre-wrap!important;
+}
+
 /*-----Home **************/
 /* .jumbotron{
   min-height: 90vh;
